# mamba-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml  release.yml
docs/: determinism-benchmarks.md  mamba1-architecture.md  mamba1-benchmarks.md  mamba3-architecture.md  mamba3-benchmarks.md  mamba3-checkpoints.md  plan-llm-support.md
examples/: cpu_prefill.rs  custom_loss.rs  gpu_inference.rs  gpu_training_bf16.rs  inference.rs  mamba3_gpu_training_bf16.rs  mamba3_inference.rs  mamba3_training.rs  train_and_infer.rs  training.rs
kernels/: _typed_prelude.cuh  activations.cu  adamw.cu  conv1d.cu  elementwise.cu  gemm_batch_invariant.cu  grad_clip.cu  loss_scaler.cu  mamba3_chunked.cu  mamba3_ops.cu  mamba3_ssd.cu  mamba_ssm.cu  mamba_ssm_parallel.cu  norms.cu  sgemm_bi.cu
src/: config.rs  lib.rs  serialize.rs  state.rs  weights.rs
src/hf/: bf16.rs  config_json.rs  embed.rs  keys.rs  load.rs  mod.rs
src/mamba3_siso/: config.rs  mod.rs  serialize.rs  state.rs  weights.rs
src/mamba3_siso/cpu/: backward.rs  dims.rs  flat.rs  forward.rs  inference.rs  mod.rs  parallel.rs  prefill.rs  scratch.rs  weights.rs
src/mamba3_siso/gpu/: backward.rs  backward_mixed.rs  forward.rs  forward_mixed.rs  inference.rs  kernels.rs  mamba3_gpu.rs  mod.rs  state.rs  trainer.rs  training_graph.rs  weights.rs  weights_mixed_train.rs
src/mamba_ssm/: mod.rs
src/mamba_ssm/cpu/: backward.rs  backward_ops.rs  flat.rs  forward.rs  inference.rs  mod.rs  parallel.rs  prefill.rs  scratch.rs  target.rs  weights.rs
src/mamba_ssm/gpu/: adamw.rs  backward.rs  backward_mixed.rs  blas.rs  buffers.rs  context.rs  device.rs  dtype.rs  forward.rs  forward_mixed.rs  grad_clip.rs  graph_capture.rs  inference.rs  kernels.rs  launch.rs  loss_scaler.rs  mod.rs  prefill.rs  sgemm_bi.rs  trainer.rs  training_graph.rs  weights.rs  weights_mixed_train.rs
src/module/: backbone.rs  backbone3.rs  gpu_lm.rs  gpu_lm3.rs  lm.rs  mod.rs  sample.rs
src/ops/: blas.rs  dims.rs  fast_math.rs  mod.rs  norms.rs
tests/: adamw_parity.rs  backward_mixed_parity.rs  backward_mixed_smoke.rs  bench_bf16_vs_f32.rs  bf16_130m_layer_bisect.rs  bf16_130m_layer_diff.rs  coverage_gaps.rs  cpu_benchmark.rs  cpu_gpu_train_parity.rs  debug_bf16_diag.rs  extreme_edge_coverage.rs  f32_training_graph_parity.rs  gpu_batch_test.rs  gpu_bench_all.rs  gpu_benchmark.rs  gpu_bf16_parity.rs  gpu_inference_prefill_parity.rs  gpu_lm_bench.rs  gpu_lm_bf16_test.rs  gpu_lm_profile.rs  gpu_lm_test.rs  gpu_mamba3_lm_test.rs  grad_clip.rs  grad_oracle.rs  hf_batch_parity.rs  hf_full_cycle.rs  hf_integration.rs  hf_training_convergence.rs  hf_training_smoke.rs  inference_f16_smoke.rs  loss_scaler.rs  m1_gpu_benchmark.rs  m1_parallel_bwd_parity.rs  m1_parallel_scan_typed_parity.rs  m1_test_correctness.rs  m3_backward_mixed_parity.rs  m3_bf16_parity.rs  m3_chunked_bwd_unit_parity.rs  m3_chunked_fwd_unit_parity.rs  m3_cpu_benchmark.rs  (+25 more)
