[package]
name = "mamba-rs"
version = "0.5.0"
edition = "2024"
rust-version = "1.97"
authors = ["silvermpx"]
description = "Mamba SSM and Mamba-3 SISO in Rust with optional CUDA GPU acceleration. Inference and training (BPTT through SSM state, AdamW), CPU + GPU paths, custom CUDA kernels, CUDA Graph capture, f32 / bf16 / f16. Opt-in deterministic training (bit-identical runs, batch-invariant inference) with a tensor-core tier that beats cuBLAS on LLM-sized models."
homepage = "https://github.com/silvermpx/mamba-rs"
documentation = "https://docs.rs/mamba-rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/silvermpx/mamba-rs"
keywords = ["mamba", "ssm", "deep-learning", "cuda", "state-space-model"]
categories = ["science", "mathematics"]
readme = "README.md"

# docs.rs builds have no CUDA toolkit -- render the CPU-side API surface
# (hf loaders, BLAS-backed GEMM, the CLI types). The cuda feature's docs
# render locally; doc(cfg) badge plumbing is a planned follow-up.
[package.metadata.docs.rs]
features = ["hf", "gemm-blas", "cli"]
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "mamba-generate"
path = "src/bin/generate.rs"
required-features = ["cli"]

[features]
default = []
# half + bytemuck are needed by the cuda buffers (DtypedBuf bf16/f16 cast
# helpers); they must be in scope for `cargo build --features cuda` alone.
cuda = ["cudarc", "dep:half", "dep:bytemuck"]
accelerate = []
gemm-blas = ["gemm"]
hf = ["dep:half", "dep:bytemuck", "dep:serde", "dep:serde_json"]
cli = ["hf", "dep:clap", "dep:tokenizers", "dep:hf-hub"]

[dependencies]
pulp = "0.22"
rayon = "1.10"
safetensors = "0.8"

[dependencies.gemm]
version = "0.19"
optional = true
default-features = false
features = ["std", "rayon"]

[dependencies.half]
version = "2"
optional = true
features = ["bytemuck"]

[dependencies.bytemuck]
version = "1"
optional = true
features = ["derive"]

[dependencies.serde]
version = "1"
optional = true
features = ["derive"]

[dependencies.serde_json]
version = "1"
optional = true

[dependencies.clap]
version = "4"
optional = true
features = ["derive"]

[dependencies.tokenizers]
version = "0.23"
optional = true

[dependencies.hf-hub]
version = "1"
optional = true
features = ["blocking"]


[dev-dependencies]
tempfile = "3"

[dependencies.cudarc]
version = "0.19.8"
optional = true
features = ["driver", "cublas", "nvrtc", "cuda-version-from-build-system"]